@@ -4,6 +4,7 @@ GENERAL IMPROVEMENTS:
 Kernel
 - Added support for loading agents (and possibly other types of objects) whose code is stored in different spaces (jar file outside the classpath, OSGi bundles...) by means of the ObjectManager class
 - Modified NotificationService, related classes and JADE internals to handle RECONNECTED and LEADERSHIP_ACQUIRED container events 
+- Enhanced MainReplicationService with support for application specific checks on connectivity status when a Main Container replica is considered dead due to a long disconnection 
 
 Behaviours
 - Added WrapperBehaviour to allow modifying behaviours methods on the fly
@@ -41,6 +42,7 @@ JADE-LEAP:
 - Modified FaultRecoveryService and JADE kernel to support reattachement of nodes that were considered dead due to a long network disconnection
 - Completed support for ServiceHelper on split container
 - Added FEService class to allow using the TopicManagement Service on split containers
+- Added support for KILL Orphan Node Policy in FaultRecoveryService. This force a termination of the orphan node.
 
 
 JADE-OSGi (NEW): 
